# mt_oil

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
00_configs/: 00_config.yaml
00_configs/01_model/: 01_nllb_600m.yaml  02_nllb_1.3b.yaml  03_m2m_418m.yaml
00_configs/03_data/: 01_npd.yaml  02_equ.yaml  03_mixed.yaml
00_configs/04_direction/: 02_eng_to_nob.yaml
00_configs/05_training/: 01_standard.yaml
00_configs/06_experiment/: 01_data_scaling.yaml  05_final_eval.yaml
00_configs/adapter/: 01_lora_r8.yaml  02_lora_r16.yaml  03_lora_r32.yaml  04_qlora_r16.yaml
00_configs/data/: 01_npd.yaml  02_equ.yaml  03_mixed.yaml
00_configs/direction/: 01_nob_to_eng.yaml  02_eng_to_nob.yaml
00_configs/experiment/: 01_data_scaling.yaml  02_gridsearch.yaml  03_optuna.yaml  04_bidirectional.yaml
00_configs/model/: 04_m2m100_1.2b.yaml
00_configs/training/: 02_fast_dev.yaml  03_distributed.yaml
10_src/: 00___init__.py
10_src/11_data/: 01_dataset.py  02_data_loader.py  03_bidirectional_handler.py  __init__.py  bidirectional_handler.py  terminology_handler.py
10_src/12_models/: 01_base_trainer.py  02_lora_trainer.py  03_terminology_trainer.py  base_trainer.py  lora_trainer.py  model_factory.py
10_src/13_evaluation/: 02_terminology_evaluator.py  base_evaluator.py  error_analyzer.py
10_src/14_utils/: 02_seed_manager.py  03_logger.py  04_visualization.py  05_mlflow_wrapper.py  __init__.py  path_manager.py  visualization.py
20_experiments/21_baseline/: 01_data_scaling.py  02_gridsearch.py  02_gridsearch.sh  03_optuna_stage1.py  04_optuna_stage2.py  05_final_eval.py  =0.26.0  slurm-9984520.err  slurm-9984521.err  slurm-9984523.err  slurm-9984544.err  slurm-9984544.out  slurm-9985496.err  slurm-9985496.out  slurm-9985720.err  slurm-9985720.out  slurm-9985845.err  slurm-9985845.out
40_outputs/01_data_scaling/: results.csv  results.json
40_outputs/01_data_scaling/size_1000/: metrics.json
40_outputs/01_data_scaling/size_10000/: metrics.json
40_outputs/01_data_scaling/size_10000/training/checkpoint-1600/: trainer_state.json
40_outputs/01_data_scaling/size_13622/training/checkpoint-2400/: trainer_state.json
40_outputs/01_data_scaling/size_2000/: metrics.json
40_outputs/01_data_scaling/size_4000/training/checkpoint-400/: trainer_state.json
40_outputs/01_data_scaling/size_500/: metrics.json
40_outputs/01_data_scaling/size_500/training/final_model/: adapter_config.json
40_outputs/01_data_scaling/size_6000/: metrics.json
40_outputs/01_data_scaling/size_6000/training/checkpoint-800/: trainer_state.json
40_outputs/01_data_scaling/size_8000/: metrics.json
40_outputs/01_data_scaling/size_8000/training/checkpoint-1200/: trainer_state.json
40_outputs/New Folder/01_data_scaling/size_100/: metrics.json
40_outputs/New Folder/01_data_scaling/size_10000/training/checkpoint-1600/: trainer_state.json
40_outputs/New Folder/01_data_scaling/size_13622/: metrics.json
40_outputs/New Folder/01_data_scaling/size_13622/training/checkpoint-2400/: trainer_state.json
40_outputs/New Folder/01_data_scaling/size_4000/: metrics.json
40_outputs/New Folder/01_data_scaling/size_4000/training/checkpoint-400/: trainer_state.json
40_outputs/data_scaling/runs/2025-12-04_10-01-35/.hydra/: config.yaml  hydra.yaml
40_outputs/data_scaling/runs/2025-12-04_10-36-42/.hydra/: hydra.yaml
60_data/00_raw_npd/: convert_npd.ipynb
60_data/01_processed_equ/: align_equ.ipynb
60_data/02_final_splits_npd/: test.json  test.tsv  train.json  train.tsv  val.json  val.tsv
(+8 files in other folders)
